fix cursor chat overflowing

--- a/packages/editor/editor.css
+++ b/packages/editor/editor.css
@@ -704,6 +704,21 @@ input,
 	text-shadow: var(--tl-text-outline);
 }
 
+.tl-nametag-chat {
+	position: absolute;
+	top: 16px;
+	left: 13px;
+	width: fit-content;
+	height: fit-content;
+	color: var(--color-selected-contrast);
+	white-space: nowrap;
+	position: absolute;
+	border-radius: 10px;
+	padding: 2px 6px;
+	font-size: 12px;
+	font-family: var(--font-family);
+}
+
 .tl-cursor-chat {
 	position: absolute;
 	top: 16px;
